# keyReducer

./: .gitignore  CMakeLists.txt  CmakeBuildWindows.bat
include/: keyReducerCmd.h  restoreKeys.h
python/tcKeyReducer/: tcKeyReducer.py
source/: PluginMain.cpp  keyReducerCmd.cpp
